# VJEPA-IDP

./: .gitignore  CLAUDE.md  README.md  notes.md  pyproject.toml  vjepa_explore.ipynb
data/: smoke.json
egoper_probe/: README.md  extract.py  probe.py
egoper_vqa/: README.md  egoper.py  ek100_tea.py  ek100_tea_eval.py  ek100_tea_viz.py  inference.ipynb  vqa.py
egoper_vqa/figures/: ek100_tea_verb_accuracy.csv
exprt_probe/: README.md  _encoder.py  action_probe.py  dataset.py  ek100_label.py  extract.py  head.py  mapping.json  pool.py  train.py
exprt_probe/qual/: README.md  annotations.csv
video_qa/: README.md  collate.py  dataset.py  model.py  prepare_data.py  train.py
video_qa/configs/: smoke.yaml  stage1.yaml  stage2.yaml  stage3.yaml
