[project]
name = "idp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "decord>=0.6.0",
    "einops>=0.8.2",
    "peft>=0.10.0",
    "python-box>=7.4.1",
    "timm>=1.0.27",
    "transformers>=4.40",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
